--- a/caches/GCBGMZV/GCBGMZV.html
+++ b/caches/GCBGMZV/GCBGMZV.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GCXXXXX</title>
+    <title>GCBGMZV</title>
     <style>
         :root { --neon: #00ff41; --bg: #0a0a0a; --dim: #002200; }
         body { 
@@ -271,4 +271,5 @@
 </script>
 
 </body>
+
 </html>
