--- a/caches/GCBGMZV/GCBGMZV.html
+++ b/caches/GCBGMZV/GCBGMZV.html
@@ -310,7 +310,7 @@
     }
 
     function unlockCoords() {
-        const c = ["N 37 _4.__2 W 1__ 0_._1_", "N 37 24.1_2 W 1_2 03._1_", "N 37 24.122 W 122 03.712"];
+        const c = ["clap", "clap fines", "clap fines sleepy"];
         document.getElementById('coords').innerText = "COORDS: " + c[currentSet - 1];
     }
 
@@ -441,3 +441,4 @@
 
 </body>
 </html>
+
