--- a/caches/GCBGMZV/GCBGMZV.html
+++ b/caches/GCBGMZV/GCBGMZV.html
@@ -310,7 +310,7 @@
     }
 
     function unlockCoords() {
-        const c = ["clap", "clap fines", "clap fines sleepy"];
+        const c = ["boxer", "boxer tribes", "boxer tribes beam"];
         document.getElementById('coords').innerText = "COORDS: " + c[currentSet - 1];
     }
 
@@ -441,4 +441,5 @@
 
 </body>
 </html>
+
 
